[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/game/ui/exp_display.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ttf/UbuntuMono-B.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.72549, 0.572549, 0.0156863, 1 )
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color( 0.290196, 0.227451, 0.00784314, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 4
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.0784314, 0.0745098, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.290196, 0.227451, 0.00784314, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 4
shadow_offset = Vector2( 2, 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color( 0.72549, 0.572549, 0.0156863, 1 )
border_blend = true
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64
shadow_size = 4
shadow_offset = Vector2( 0, 4 )

[node name="ExpDisplay" type="Control"]
margin_right = 932.0
margin_bottom = 27.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ExpBar" type="ProgressBar" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -48.5
margin_right = 1.0
margin_bottom = 47.5
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "111"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
